--- a/.github/workflows/ci-karsajobs.yml
+++ b/.github/workflows/ci-karsajobs.yml
@@ -3,10 +3,10 @@ name: CI - Karsajobs Backend
 on:
   push:
     branches:
-      - karsajobs
+      - karsajobs-be
   pull_request:
     branches:
-      - karsajobs
+      - karsajobs-be
 
 jobs:
   lint-dockerfile:
